# pareto-context-graph

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.cursor/rules/: behavioural_guideline.mdc
.github/: copilot-instructions.md  pull_request_template.md
.github/agents/: roadmap-model-router.agent.md
.github/prompts/: speckit.brownfield.prompt.md
.github/workflows/: bench-t2.yml  bench-t3-linux.yml  bench-weekly.yml  eval.yml  pcg-affected.yml.example  publish.yml  quality.yml
.specify/: init-options.json
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
deploy/: otel-collector-config.yaml
docs/: ARCHITECTURE.md  BENCHMARKS.md  BENCHMARK_REPOS.md  CI_SNAPSHOTS.md  COMMANDS.md  CONTEXT_COMPRESSION.md  CRG_INSPIRATIONS.md  FEEDBACK.md  HOOKS.md  LEFTOVERS.md  OPTIONAL_FEATURES.md  PHASES.md  PHASES_CODIFIED_CONTEXT.md  PRODUCTION_ROADMAP.md  PROJECT_PLAN.md  QUICKSTART.md  ROADMAP.md  TOKEN_REDUCTION_AGENT_RESEARCH.md
docs/diagrams/: README.md  before-after.mmd  build-query.mmd  c4-component-context.mmd  c4-container.mmd  c4-context.mmd  context-pipeline.mmd  context-sequence.mmd  editor-integration.mmd  follow-up-delta.mmd  north-star.mmd  problem-flow.mmd  system-overview.mmd  tier-escalation.mmd  token-layers.mmd
docs/examples/: context-map.json  routing.json
scripts/: agent_ab_check.py  agent_bench.sh  agent_bench_aggregate.py  audit_golden_cases.py  bench_huge.sh  bench_setup.sh  build_microbench.py  embed_ab.py  eval_judge.mjs  expand_golden_cases.py  expand_golden_from_prs.py  linux_bench.sh  memory_probe.sh  pre_bench.sh  profile_build.py  render_diagrams.sh
src/code_graph_mcp/: __init__.py  api.py  blast.py  chunks.py  cli.py  daemon.py  embed.py  eval.py  graph.py  hooks.py  profiles.py  server.py  snapshot.py  store.py  tokens.py  walk.py
src/pareto_context_graph/: __init__.py  __main__.py  ablation.py  adaptive_cap.py  affected.py  agent_ab.py  agent_install.py  agent_transcript.py  api.py  architecture_report.py  audit.py  bench.py  blast.py  build_estimate.py  build_profile.py  cancellation.py  chunks.py  cli.py  community.py  (+61 more)
tests/: conftest.py  test_ablation.py  test_agent_transcript.py  test_audit_rotation.py  test_bench_stress.py  test_blast_structural.py  test_build_estimate.py  test_build_incremental.py  test_build_profile.py  test_build_smoke.py  test_codified_context.py  test_codify_suggestion.py  test_community.py  test_community_rank.py  test_compress_stack.py  test_confidence_calibration.py  test_context_confidence.py  test_context_phase_metrics.py  test_context_pipeline_phases.py  test_context_ranking.py  test_daemon.py  test_deadlines.py  test_decay.py  test_doctor.py  test_embed.py  test_eval_metrics.py  test_fastapi_symbol_search.py  test_features.py  test_feedback.py  test_feedback_events.py  test_feedback_hooks.py  test_feedback_replay.py  test_flows.py  test_graph_diff.py  test_hooks.py  test_hub_suppression.py  test_hub_timeout.py  test_iterative.py  test_learn.py  test_mcp_prompts.py  (+39 more)
(+28 files in other folders)
