[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pareto-context-graph"
version = "0.1.0"
description = "Pareto-ranked, token-budgeted context for AI coding assistants"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Sriram Mentey" }]
keywords = ["mcp", "context", "ai", "coding-assistant", "retrieval", "token-budget"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/sreeram843/pareto-context-graph"
Repository = "https://github.com/sreeram843/pareto-context-graph"
Documentation = "https://github.com/sreeram843/pareto-context-graph/blob/main/docs/QUICKSTART.md"
Issues = "https://github.com/sreeram843/pareto-context-graph/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "pyyaml>=6",
]
policy = ["pyyaml>=6"]
otel = [
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27",
]
tiktoken = ["tiktoken"]
treesitter = ["tree-sitter>=0.22", "tree-sitter-python>=0.21", "tree-sitter-go>=0.21"]
igraph = ["igraph"]
ranker = ["lightgbm>=4.0"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B007", "B905", "F841"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true
packages = ["pareto_context_graph"]

[[tool.mypy.overrides]]
module = [
    "pareto_context_graph.cli",
    "pareto_context_graph.bench",
    "pareto_context_graph.snapshot",
    "pareto_context_graph.profiles",
    "pareto_context_graph.server",
    "pareto_context_graph.audit",
]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
branch = true
source = ["pareto_context_graph"]

[tool.coverage.report]
fail_under = 35
show_missing = true

[project.scripts]
pareto-context-graph = "pareto_context_graph.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pareto_context_graph"]
